[package]
name = "downloader_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
futures-util = "0.3.31"
indicatif = "0.17.9"
reqwest = {version = "0.12.9", features = ["stream"]}
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
